# cmux

./: README.md  install.sh  pyproject.toml  uninstall.sh
cmux/: __init__.py
cmux.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cmux/backend/: base.py  claude.py  copilot.py
cmux/core/: cli.py  config.py  pomodoro.py  repl.py  session.py
cmux/dashboard/: stats.py  tui.py
cmux/integrations/: macos_context.py  platform.py  windows_context.py
cmux/output/: markdown.py  office.py  router.py
cmux/skills/: base.py  registry.py
cmux/skills/builtins/: brainstorm_reflect.py  competitive_research.py  copywriting.py  data_analysis.py  deck.py  golden_set.py  one_pager.py  prd_spec.py  prototype.py  status_update.py
cmux/tasks/: models.py  queue.py
cmux/tasks/sources/: interactive.py  workiq.py  yaml_source.py
cmux/templates/: cli.py  loader.py
docs/: architecture.md  spec.md  user-guide.md
